--- a/crud/templates/attachments/sidebar.html
+++ b/crud/templates/attachments/sidebar.html
@@ -41,12 +41,20 @@
                             Monthly Sales
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'manage_admin' %}" class="flex items-center text-white hover:text-amber-200 transition">
+                            <span class="material-icons mr-3">person_add</span>
+                            Admin Accounts
+                        </a>
+                    </li>
+                    <li>    
+                        <a href="#" class="flex items-center text-white hover:text-amber-200 transition mt-72">
+                            <span class="material-icons mr-3">logout</span>
+                            Logout
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <a href="#" class="flex items-center text-white hover:text-amber-200 transition mt-96">
-                <span class="material-icons mr-3">logout</span>
-                Logout
-            </a>
         </div>
     </aside>
 </div>
