--- a/crud/templates/web/admin/pricing.html
+++ b/crud/templates/web/admin/pricing.html
@@ -4,7 +4,6 @@
 
 {% block content %}
 {% load static %}
-{% include "attachments/form_modals.html" %}
 <div class="min-h-screen bg-gray-100 flex">
     <!-- Sidebar -->
     {% include "attachments/sidebar.html" %}
@@ -23,7 +22,7 @@
                 <h2 class="text-xl font-semibold mb-4">Set Room Price</h2>
                 <form method="POST" action="{% url 'set_price' %}" class="space-y-4">
                     {% csrf_token %}
-                    <div class="grid grid-cols-2 gap-4">
+                    <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
                         <div>
                             <label class="block text-sm font-medium text-gray-600">Select Room *</label>
                             <select name="room_id" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
@@ -34,7 +33,18 @@
                             </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-600">Price every 12hours *</label>
+                            <label class="block text-sm font-medium text-gray-600">Price Type *</label>
+                            <div class="mt-1 relative rounded-md shadow-sm">
+                                <select name="price_type" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                                    <option value="">Select Price Type</option>
+                                    {% for value, display in room_price_type %}
+                                    <option value="{{ value }}">{{ display }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-600">Price *</label>
                             <div class="mt-1 relative rounded-md shadow-sm">
                                 <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                                     <span class="text-gray-500 sm:text-sm">₱</span>
