--- a/crud/templates/web/admin/add_guest.html
+++ b/crud/templates/web/admin/add_guest.html
@@ -53,8 +53,13 @@
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
-                        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+                        <label for="confirm_password" class="block text-sm font-medium text-gray-700">Password</label>
                         <input type="password" id="password" name="password" required
+                            class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                    </div>
+                    <div>
+                        <label for="password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
+                        <input type="password" id="confirm_password" name="confirm_password" required
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
@@ -69,8 +74,8 @@
                     </div>
                     <div>
                         <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
-                        <textarea id="address" name="address" rows="3" required
-                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"></textarea>
+                        <input id="address" name="address" rows="3" required
+                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"></input>
                     </div>
                     <div>
                         <label for="notes" class="block text-sm font-medium text-gray-700">Notes</label>
