--- a/crud/templates/web/admin/add_guest.html
+++ b/crud/templates/web/admin/add_guest.html
@@ -14,42 +14,42 @@
                 <div class="grid grid-cols-3 gap-4 w-fit mx-auto">
                     <div>
                         <label for="first_name" class="block text-sm font-medium text-gray-700">First Name</label>
-                        <input type="text" id="first_name" name="first_name" required
+                        <input type="text" id="first_name" name="first_name" required value="{{ first_name|default:'' }}"
                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="last_name" class="block text-sm font-medium text-gray-700">Last Name</label>
-                        <input type="text" id="last_name" name="last_name" required
+                        <input type="text" id="last_name" name="last_name" required value="{{ last_name|default:'' }}"
                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="middle_name" class="block text-sm font-medium text-gray-700">Middle Name</label>
-                        <input type="text" id="middle_name" name="middle_name"
+                        <input type="text" id="middle_name" name="middle_name" value="{{ middle_name|default:'' }}"
                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-                        <input type="text" id="username" name="username" required
+                        <input type="text" id="username" name="username" required value="{{ username|default:'' }}"
                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="gender" class="block text-sm font-medium text-gray-700">Gender</label>
-                        <select id="gender" name="gender" required
+                        <select id="gender" name="gender" required 
                                 class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                             <option value="">Select gender</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
+                            <option value="male" {% if gender == "male" %}selected{% endif %}>Male</option>
+                            <option value="female" {% if gender == "female" %}selected{% endif %}>Female</option>
+                            <option value="other" {% if gender == "other" %}selected{% endif %}>Other</option>
                         </select>
                     </div>
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <input type="email" id="email" name="email" required
+                        <input type="email" id="email" name="email" required value="{{ email|default:'' }}"
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="phone_number" class="block text-sm font-medium text-gray-700">Phone Number</label>
-                        <input type="tel" id="phone_number" name="phone_number" required
+                        <input type="tel" id="phone_number" name="phone_number" required value="{{ phone_number|default:'' }}"
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
@@ -64,23 +64,23 @@
                     </div>
                     <div>
                         <label for="nationality" class="block text-sm font-medium text-gray-700">Nationality</label>
-                        <input type="text" id="nationality" name="nationality" required
-                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                        <input type="text" id="nationality" name="nationality" required value="{{ nationality|default:'' }}"
+                               class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="emergency_contact" class="block text-sm font-medium text-gray-700">Emergency Contact</label>
-                        <input type="text" id="emergency_contact" name="emergency_contact" required
+                        <input type="text" id="emergency_contact" name="emergency_contact" required value="{{ emergency_contact|default:'' }}"
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
-                        <input id="address" name="address" rows="3" required
+                        <input id="address" name="address" rows="3" required value="{{ address|default:'' }}"
                                 class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"></input>
                     </div>
                     <div>
                         <label for="notes" class="block text-sm font-medium text-gray-700">Notes</label>
                         <textarea id="notes" name="notes" rows="3"
-                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"></textarea>
+                                class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">{{ notes|default:'' }}</textarea>
                     </div>
                 </div>
                 <div class="flex justify-end space-x-3">
