--- a/crud/templates/web/admin/book_guest.html
+++ b/crud/templates/web/admin/book_guest.html
@@ -154,11 +154,11 @@
 
                 <div class="flex justify-end mt-6 space-x-3">
                     <a href="{% url 'manage_guests' %}" 
-                       class="px-6 py-2 bg-gray-100 text-gray-700 font-semibold rounded-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">
+                       class="px-6 py-2 bg-gray-100 border border-black text-gray-700 font-semibold rounded-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-500">
                         Cancel
                     </a>
                     <button type="submit" 
-                            class="px-6 py-2 bg-green-600 text-white font-semibold rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+                            class="px-6 py-2 bg-green-600 text-white font-semibold rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500">
                         Book Now
                     </button>
                 </div>
