--- a/crud/templates/web/admin/manage_guests.html
+++ b/crud/templates/web/admin/manage_guests.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <script src="{% static 'js/manage_guests.js' %}"></script>
-<script src="{% static 'js/pagination.js' %}"></script>
+{% comment %} <script src="{% static 'js/pagination.js' %}"></script> {% endcomment %} 
 <div class="min-h-screen bg-gray-100 flex sm:flex-row flex-col">
     {% include "attachments/sidebar.html" %}
     <div class="max-w-5xl mx-auto my-auto h-full bg-white rounded-xl shadow-md p-6">
@@ -98,7 +98,7 @@
                                     <span class="material-icons text-base">edit</span>
                                 </a>
                                 <a href="{% url 'check_out' guest.id %}" class="text-red-600 hover:text-red-800 mx-1" title="Check-Out">
-                                    <span class="material-icons align-middle text-base">check_circle</span>
+                                    <span class="material-icons align-middle text-base">logout</span>
                                 </a>
                             </td>
                         </tr>
@@ -228,11 +228,14 @@
                             <td class="px-4 py-2 border">{{ guest.check_out|date:"m/d/y h:i A" }}</td>
                             <td class="px-4 py-2 border">{{ guest.payment_status }}</td>
                             <td class="px-4 py-2 border text-center">
-                                <a href="{% url 'edit_guest' guest.id %}" class="text-green-600 hover:text-green-800 mx-1" title="Edit">
+                                <a href="{% url 'edit_guest' guest.booking_id %}" 
+                                class="text-blue-600 hover:text-blue-800 mx-1" 
+                                title="Edit">
                                     <span class="material-icons align-middle text-base">edit</span>
                                 </a>
-                                <a href="{% url 'check_out' guest.id %}" class="text-red-600 hover:text-red-800 mx-1" title="Check-Out">
-                                    <span class="material-icons align-middle text-base">check_circle</span>
+                                <a href="{% url 'check_out' guest.id %}" 
+                                class="text-red-600 hover:text-red-800 mx-1" title="Check-Out">
+                                    <span class="material-icons align-middle text-base">logout</span>
                                 </a>
                             </td>
                         </tr>
